add paragraph for conclusion and abstract in french, only arabic is left

--- a/writing/includes/part2/section7.tex
+++ b/writing/includes/part2/section7.tex
@@ -1,11 +1,13 @@
 \section{Conclusion}
 \paragraph{}
 Our study aimed to develop a \ac{slr} model using a pre-existing sensor-based \ac{asl} dataset. Despite the time constraints and limited resources, we leveraged the \ac{asl} dataset, which consists of 40 different signs, including 26 letters and 14 common words. The dataset was collected from 25 subjects, with each subject repeating each gesture 10 times, resulting in a total of 150,000 records.
-\paragraph{}
+
 Throughout our research, we successfully trained and evaluated a \ac{dl} model for \ac{slr}. The word recognition model achieved an impressive accuracy of 94.63\% on the test dataset, while the character recognition model achieved an accuracy of 95.03\%. These results demonstrate the effectiveness and reliability of our implemented models in accurately recognizing and classifying \ac{sl} gestures.
-\paragraph{}
+
 However, it is important to acknowledge the limitations of our study. The use of an \ac{asl} dataset, instead of a dedicated \ac{asp} dataset, poses a significant limitation. While the \ac{asl} dataset provided a solid foundation for our research, it may not fully capture the unique characteristics and nuances of \ac{asp}. Future work should prioritize the collection of a dedicated dataset specific to \ac{asp} to train the model more effectively.
-\paragraph{}
+
 Furthermore, considering the limited number of subjects and gestures in our dataset, expanding the dataset with more diverse subjects and a broader range of signs would contribute to a more comprehensive and generalized \ac{slr} model.
-\paragraph{}
+
+Although we have successfully developed and tested our model on the computer using the available dataset, it is important to note that we have not yet conducted real-life testing with the TAKALEM gloves due to resource limitations. Therefore, we cannot guarantee the same level of performance and accuracy in real-life scenarios. However, we are confident in our model's ability to adapt and address any challenges that may arise during the full-scale manufacturing of the prototype. Future testing and evaluation with the TAKALEM gloves will provide valuable insights and allow us to refine and optimize the model for real-world applications.
+
 In conclusion, our study demonstrates the potential of \ac{dl} models in \ac{slr}. Despite the limitations, our models achieved high accuracy in recognizing both words and characters from the \ac{asl} dataset. By addressing the identified limitations and incorporating additional data sources, such as dedicated \ac{asp} datasets and multiple modalities, future research can further improve the accuracy and applicability of \ac{slr} systems.
