--- a/writing/includes/title.tex
+++ b/writing/includes/title.tex
@@ -1,14 +1,17 @@
 \begin{titlepage}
+	\includegraphics[width=0.15\textwidth]{./images/incubator.png}\hfill
+	\includegraphics[width=0.65\textwidth]{./images/title.png}\hfill
+	\includegraphics[width=0.1\textwidth]{./images/university.png}
 	\begin{center}
-		PEOPLE’S DEMOCRATIC REPUBLIC OF ALGERIA\\[0.4cm]
-		MINISTRY OF HIGHER EDUCATION AND SCIENTIFIC RESEARCH\\[0.4cm]
-		LARBI TEBESSI UNIVERSITY\\[0.4cm]
-		\includegraphics[width=0.25\textwidth]{./images/univ-tebessa.jpg}\\[1cm]
-		FACULTY OF EXACT SCIENCES AND SCIENCES OF NATURE AND LIFE\\[0.4cm]
-		DEPARTMENT OF MATHEMATICS AND COMPUTER SCIENCE\\[0.5cm]
+		%PEOPLE'S DEMOCRATIC REPUBLIC OF ALGERIA\\
+		%MINISTRY OF HIGHER EDUCATION AND SCIENTIFIC RESEARCH\\
+		%ECHAHID CHEIKH LARBI TEBESSI UNIVERSITY\\
+		%FACULTY OF EXACT SCIENCES AND SCIENCES OF NATURE AND LIFE\\
+		%DEPARTMENT OF MATHEMATICS AND COMPUTER SCIENCE\\
+		\Large{Graduation dissertation to obtain a masters degree a start-up institution within the framework of ministerial resolution 1275}\\[0.5cm]
 		\rule{\textwidth}{0.075cm}\\[0.4cm]
-		\textsc{\huge \bfseries \@title}\\[1cm] 
-		\rule{\textwidth}{0.075cm}\\[1cm]
+		\textsc{\huge \bfseries \@title}
+		\rule{\textwidth}{0.075cm}\\[2cm]
 		\begin{minipage}{0.4\textwidth}
 			\begin{flushleft}
 				\emph{\textbf{Submitted by}}\\
@@ -18,11 +21,31 @@
 		\begin{minipage}{0.4\textwidth}
 			\begin{flushright}
 				\emph{\textbf{Supervised by}}\\
-				\textsc{Pr. Mohamed Amroun}\\
-				\textsc{Dr. Issam Bendib}\\
-				\textsc{Dr. M Yassine Haouam}\\
-				\textsc{Dr. Khelifa Boudjemaa}
+				\textsc{Pr. Mohamed Amroune}\\
+				\textsc{Dr. Issam Bendib}
 			\end{flushright}
+		\end{minipage}\\[1cm]
+		\begin{minipage}[c]{0.8\textwidth}
+			\begin{flushleft}
+				\emph{\textbf{Jury Members}}\\[0.4cm]
+				\begin{minipage}{0.3\textwidth}
+					\textsc{Pr. X}\\
+					\textsc{Pr. X}\\
+					\textsc{Pr. X}\\
+					\textsc{Pr. X}
+				\end{minipage}
+				\begin{minipage}{0.3\textwidth}
+					Professor\\
+					MCA\\
+					MCA\\
+				\end{minipage}
+				\begin{minipage}{0.3\textwidth}
+					President\\
+					Examiner\\
+					Incubator\\
+					Economic
+				\end{minipage}
+			\end{flushleft}
 		\end{minipage}
 		\vfill
 		\@date
