--- a/writing/main.tex
+++ b/writing/main.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside]{report}
+\documentclass[]{report}
 \usepackage[a4paper,left=1.2in,right=0.8in,top=1.2in,bottom=0.8in]{geometry}
 \linespread{1.5}
 \usepackage{graphicx}
@@ -26,7 +26,7 @@
 
 \title{TAKALEM : Deep learning approach for Algerian sign language recognition}
 \author{Fathi Abdelmalek}
-\date{\today}
+\date{July 20, 2023}
 
 \DeclareAcronym{sl}{
 	short={SL},
@@ -187,8 +187,8 @@
 	\clearpage
 	%\input{includes/abstract_ar.tex}
 	%\clearpage
-	%\input{includes/abstract_fr.tex}
-	%\clearpage
+	\input{includes/abstract_fr.tex}
+	\clearpage
 	\printacronyms
 	\clearpage
 	\tableofcontents
