complete everything, only the names of jury members is left

--- a/writing/includes/abstract_ar.tex
+++ b/writing/includes/abstract_ar.tex
@@ -1,15 +1,1 @@
-\renewcommand{\abstractname}{ملخص}
-\begin{abstract}
-	\paragraph{}
-	يلعب التعرف على لغة الإشارة دورًا حاسمًا في تسهيل التواصل بين الأفراد ذوي الإعاقات السمعية والأشخاص العاديين. نريد تصنيع قفازات ذكية للتعرف على لغة الإشارة الجزائرية (ASP) وترجمتها إلى الكلام باستخدام خوارزميات التعلم العميق. ولكن الافتقار إلى مجموعة بيانات ASP والقيود الزمنية المحدودة يطرحان تحديات في تطوير مجموعة بيانات مخصصة. في هذه الدراسة، يتم استخدام مجموعة بيانات لغة الإشارة الأمريكية (ASL) الحالية، و يتم استخدام نموذج الذاكرة طويلة و قصيرة المدى (LSTM) لتصنيف الإشارات. يحقق نموذج LSTM دقة مثيرة للإعجاب بنسبة 95.03٪ للتصنيف على مستوى الحروف و 94.63٪ للتصنيف على مستوى الكلمات. من اللافت للنظر أن النموذج يظهر الحد الأدنى من الأخطاء في كل من تصنيفات الأحرف والكلمات، ويرجع ذلك أساسًا إلى اختيار العلامة الأكثر توقعًا من مجموعة من 150 تنبؤًا لكل إيماءة. في حين أن هذه النتائج تظهر فعالية النموذج.
-	
-	\vspace{0.5cm}
-	
-	\providecommand{\keywords}[1]
-	{
-		\small	
-		\textbf{\textit{Keywords---}} #1
-	}
-	
-	\keywords{لغة الإشارة, ASP, ASL, التعرف على لغة الإشارة, التعلم العميق, LSTM}
-\end{abstract}
+\includegraphics[width=1\textwidth]{./images/abstract.png}
