--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -185,3 +185,88 @@
 	year={2019},
 	publisher={IEEE}
 }
+@article{azar2020trajectory,
+	title={Trajectory-based recognition of dynamic Persian sign language using hidden Markov model},
+	author={Azar, Saeideh Ghanbari and Seyedarabi, Hadi},
+	journal={Computer Speech \& Language},
+	volume={61},
+	pages={101053},
+	year={2020},
+	publisher={Elsevier}
+}
+@inproceedings{graves2013speech,
+	title={Speech recognition with deep recurrent neural networks},
+	author={Graves, Alex and Mohamed, Abdel-rahman and Hinton, Geoffrey},
+	booktitle={2013 IEEE international conference on acoustics, speech and signal processing},
+	pages={6645--6649},
+	year={2013},
+	organization={Ieee}
+}
+@article{vapnik1996support,
+	title={Support vector method for function approximation, regression estimation and signal processing},
+	author={Vapnik, Vladimir and Golowich, Steven and Smola, Alex},
+	journal={Advances in neural information processing systems},
+	volume={9},
+	year={1996}
+}
+@book{bezdek2013pattern,
+	title={Pattern recognition with fuzzy objective function algorithms},
+	author={Bezdek, James C},
+	year={2013},
+	publisher={Springer Science \& Business Media}
+}
+@inproceedings{kumar2016sign,
+	title={Sign language recognition},
+	author={Kumar, Anup and Thankachan, Karun and Dominic, Mevin M},
+	booktitle={2016 3rd international conference on recent advances in information technology (RAIT)},
+	pages={422--428},
+	year={2016},
+	organization={IEEE}
+}
+@article{rastgoo2021sign,
+	title={Sign language recognition: A deep survey},
+	author={Rastgoo, Razieh and Kiani, Kourosh and Escalera, Sergio},
+	journal={Expert Systems with Applications},
+	volume={164},
+	pages={113794},
+	year={2021},
+	publisher={Elsevier}
+}
+@inproceedings{bantupalli2018american,
+	title={American sign language recognition using deep learning and computer vision},
+	author={Bantupalli, Kshitij and Xie, Ying},
+	booktitle={2018 IEEE International Conference on Big Data (Big Data)},
+	pages={4896--4899},
+	year={2018},
+	organization={IEEE}
+}
+@article{stewart1998sign,
+	title={Sign language interpreting: Exploring its art and science},
+	author={Stewart, David A and Schein, JD and Cartwright, BE},
+	journal={Psychology},
+	volume={71},
+	pages={74},
+	year={1998}
+}
+@article{huang2018attention,
+	title={Attention-based 3D-CNNs for large-vocabulary sign language recognition},
+	author={Huang, Jie and Zhou, Wengang and Li, Houqiang and Li, Weiping},
+	journal={IEEE Transactions on Circuits and Systems for Video Technology},
+	volume={29},
+	number={9},
+	pages={2822--2832},
+	year={2018},
+	publisher={IEEE}
+}
+@book{jepsen2015sign,
+	title={Sign languages of the world: A comparative handbook},
+	author={Jepsen, Julie Bakken and De Clerck, Goedele and Lutalo-Kiingi, Sam and McGregor, William B},
+	year={2015},
+	publisher={Walter de Gruyter GmbH \& Co KG}
+}
+@book{semino2016routledge,
+	title={The Routledge handbook of metaphor and language},
+	author={Semino, Elena and Demj{\'e}n, Zs{\'o}fia},
+	year={2016},
+	publisher={Taylor \& Francis}
+}
