--- a/writing/includes/title.tex
+++ b/writing/includes/title.tex
@@ -1,52 +1,50 @@
 \begin{titlepage}
-	\includegraphics[width=0.15\textwidth]{./images/incubator.png}\hfill
-	\includegraphics[width=0.65\textwidth]{./images/title.png}\hfill
-	\includegraphics[width=0.1\textwidth]{./images/university.png}
+	\begin{figure}
+		\centering
+		\begin{adjustbox}{valign=c}
+			\includegraphics[width=0.18\textwidth]{./images/incubator.png}
+		\end{adjustbox}
+		\hfill
+		\begin{adjustbox}{valign=c}
+			\includegraphics[width=0.7\textwidth]{./images/title.png}
+		\end{adjustbox}
+		\hfill
+		\begin{adjustbox}{valign=c}
+			\includegraphics[width=0.1\textwidth]{./images/university.png}
+		\end{adjustbox}
+		\vspace{1cm}
+	\end{figure}
 	\begin{center}
 		%PEOPLE'S DEMOCRATIC REPUBLIC OF ALGERIA\\
 		%MINISTRY OF HIGHER EDUCATION AND SCIENTIFIC RESEARCH\\
 		%ECHAHID CHEIKH LARBI TEBESSI UNIVERSITY\\
+		%INCUBATOR OF BUSINESS, TEBESSA\\
 		%FACULTY OF EXACT SCIENCES AND SCIENCES OF NATURE AND LIFE\\
 		%DEPARTMENT OF MATHEMATICS AND COMPUTER SCIENCE\\
 		\Large{Graduation dissertation to obtain a masters degree a start-up institution within the framework of ministerial resolution 1275}\\[0.5cm]
 		\rule{\textwidth}{0.075cm}\\[0.4cm]
 		\textsc{\huge \bfseries \@title}
 		\rule{\textwidth}{0.075cm}\\[2cm]
-		\begin{minipage}{0.4\textwidth}
+		\begin{minipage}{0.46\textwidth}
 			\begin{flushleft}
 				\emph{\textbf{Submitted by}}\\
 				\textsc{\@author}
 			\end{flushleft}
 		\end{minipage}
-		\begin{minipage}{0.4\textwidth}
+		\begin{minipage}{0.46\textwidth}
 			\begin{flushright}
 				\emph{\textbf{Supervised by}}\\
 				\textsc{Pr. Mohamed Amroune}\\
 				\textsc{Dr. Issam Bendib}
 			\end{flushright}
 		\end{minipage}\\[1cm]
-		\begin{minipage}[c]{0.8\textwidth}
-			\begin{flushleft}
-				\emph{\textbf{Jury Members}}\\[0.4cm]
-				\begin{minipage}{0.3\textwidth}
-					\textsc{Pr. X}\\
-					\textsc{Pr. X}\\
-					\textsc{Pr. X}\\
-					\textsc{Pr. X}
-				\end{minipage}
-				\begin{minipage}{0.3\textwidth}
-					Professor\\
-					MCA\\
-					MCA\\
-				\end{minipage}
-				\begin{minipage}{0.3\textwidth}
-					President\\
-					Examiner\\
-					Incubator\\
-					Economic
-				\end{minipage}
-			\end{flushleft}
-		\end{minipage}
+		\begin{tabular}{lll}
+			\emph{\textbf{Jury Members}} &  &  \\
+			Pr. Hakim Bendjanna & Professor & President \\
+			Pr. M Rida Laouar & Professor & Examiner \\
+			Dr. M Cherif Nait-Hammoud & MCA & Incubator's Representative \\
+			Mr. X &  & Economic Partner Representative \\
+		\end{tabular}
 		\vfill
 		\@date
 	\end{center}
