the final version

--- a/writing/includes/title.tex
+++ b/writing/includes/title.tex
@@ -15,23 +15,17 @@
 		\vspace{1cm}
 	\end{figure}
 	\begin{center}
-		%PEOPLE'S DEMOCRATIC REPUBLIC OF ALGERIA\\
-		%MINISTRY OF HIGHER EDUCATION AND SCIENTIFIC RESEARCH\\
-		%ECHAHID CHEIKH LARBI TEBESSI UNIVERSITY\\
-		%INCUBATOR OF BUSINESS, TEBESSA\\
-		%FACULTY OF EXACT SCIENCES AND SCIENCES OF NATURE AND LIFE\\
-		%DEPARTMENT OF MATHEMATICS AND COMPUTER SCIENCE\\
 		\Large{Graduation dissertation to obtain a masters degree a start-up institution within the framework of ministerial resolution 1275}\\[0.5cm]
 		\rule{\textwidth}{0.075cm}\\[0.4cm]
 		\textsc{\huge \bfseries \@title}
 		\rule{\textwidth}{0.075cm}\\[2cm]
-		\begin{minipage}{0.46\textwidth}
+		\begin{minipage}{0.375\textwidth}
 			\begin{flushleft}
 				\emph{\textbf{Submitted by}}\\
 				\textsc{\@author}
 			\end{flushleft}
 		\end{minipage}
-		\begin{minipage}{0.46\textwidth}
+		\begin{minipage}{0.375\textwidth}
 			\begin{flushright}
 				\emph{\textbf{Supervised by}}\\
 				\textsc{Pr. Mohamed Amroune}\\
@@ -40,10 +34,10 @@
 		\end{minipage}\\[1cm]
 		\begin{tabular}{lll}
 			\emph{\textbf{Jury Members}} &  &  \\
-			Pr. Hakim Bendjanna & Professor & President \\
-			Pr. M Rida Laouar & Professor & Examiner \\
-			Dr. M Cherif Nait-Hammoud & MCA & Incubator's Representative \\
-			Mr. X &  & Economic Partner Representative \\
+			Abdeldjalil gattal & MCA & President \\
+			Merzoug Soltane & MCA & Examiner \\
+			Lakhdar Laiimeche & MCA & Incubator's Representative \\
+			Tourkia Hadfi &  & Economic Partner Representative \\
 		\end{tabular}
 		\vfill
 		\@date
