adjust the aknowledgment

--- a/writing/includes/acknowledgements.tex
+++ b/writing/includes/acknowledgements.tex
@@ -2,13 +2,15 @@
 \paragraph{}
 I would like to take this opportunity to express my sincere gratitude to all those who have supported and guided me throughout this incredible journey.
 
-First and foremost, I extend my deepest appreciation to the members of the LAMIS laboratory at Larbi Tebessi University of Tebessa. I am immensely grateful to my supervisor Professor Mohammed Amroune, Dr. Issam Bendib, Dr. M. Yassin Haouam, Dr. Khelifa Boudjemaa, and Dr. Salima Bourougaa for their invaluable guidance, encouragement, and support throughout this project. Their expertise and mentorship have been instrumental in shaping my research and academic development.
+First and foremost, I extend my deepest appreciation to the members of the LAMIS laboratory at Echahid Cheikh Larbi Tebessi University of Tebessa. I am immensely grateful to my supervisor Professor Mohammed Amroune, Dr. Issam Bendib, Dr. M. Yassin Haouam, Dr. Khelifa Boudjemaa, and Dr. Salima Bourougaa for their invaluable guidance, encouragement, and support throughout this project. Their expertise and mentorship have been instrumental in shaping my research and academic development.
 
 I would also like to extend my heartfelt thanks to all the professors, researchers, and fellow students at LAMIS laboratory for their collaboration, insightful discussions, and constructive feedback. Their collective efforts have greatly enriched my understanding and contributed to the success of this work.
 
-Furthermore, I am deeply indebted to the faculty and staff of Larbi Tebessi University for providing a conducive academic environment and research facilities. Their commitment to excellence and dedication to fostering knowledge and innovation have played a significant role in the realization of this project.
+Furthermore, I am deeply indebted to the faculty and staff of the university for providing a conducive academic environment and research facilities. Their commitment to excellence and dedication to fostering knowledge and innovation have played a significant role in the realization of this project.
 
 I would like to express my gratitude to my family and friends for their unwavering support, patience, and belief in me. Their encouragement and understanding have been my source of strength throughout this challenging endeavor.
+
+Finally, I would like to thank Hisham Kada Medjahed who gave us a training course in Arduino, thanks to which I was able to deal with sensors efficiently and effectively.
 
 Although it is not possible to mention everyone individually, please know that your support and contributions have been deeply appreciated.
 
