--- a/writing/includes/part1/chapter1.tex
+++ b/writing/includes/part1/chapter1.tex
@@ -1,4 +1,4 @@
-\chapter{Sign languages and sign language recognition}
+\chapter{Sign languages recognition}
 \input{includes/part1/chapter1/section1.tex}
 \input{includes/part1/chapter1/section2.tex}
 \input{includes/part1/chapter1/section3.tex}
